--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>프로필 사진을 앨범에서 선택하기 위해 사용합니다.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>프로필 사진을 촬영하기 위해 카메라를 사용합니다.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>프로필 사진 촬영 시 비디오에 오디오를 녹음하기 위해 사용합니다.</string>
+
 </dict>
 </plist>
