--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Secret files
+#구글api key값이 git으로 올라가지 않게 막기위해 .env사용
+.env
