--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- [추가] 인터넷 연결 권한. 지도 타일, API 통신 등 네트워크 사용에 필수적입니다. -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:label="carrot"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- Google Maps API 키를 등록합니다. -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="@string/google_maps_key"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
