진성 나는 할수없는 몸이야....거리별하기가 너무 귀찮아....해줘...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^1.0.7 #갤러리/카메라 사용을 위한 패키지
   flutter_dotenv: ^5.1.0 #API 키 관리를 위한 패키지
   google_maps_flutter: ^2.6.1 #구글 맵 사용을 위한 패키지
+  geolocator: ^13.0.1 #위치 정보를 가져오기 위한 패키지
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
